WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255974
AX: aria-flowto doesn't work for display:contents elements
https://bugs.webkit.org/show_bug.cgi?id=255974
Summary
AX: aria-flowto doesn't work for display:contents elements
Tyler Wilcock
Reported
2023-04-25 23:08:22 PDT
...
Attachments
Patch
(18.64 KB, patch)
2023-04-25 23:14 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(15.40 KB, patch)
2023-04-25 23:20 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-04-25 23:08:35 PDT
<
rdar://problem/108542797
>
Tyler Wilcock
Comment 2
2023-04-25 23:14:15 PDT
Created
attachment 466091
[details]
Patch
Tyler Wilcock
Comment 3
2023-04-25 23:20:51 PDT
Created
attachment 466092
[details]
Patch
EWS
Comment 4
2023-04-26 12:23:04 PDT
Committed
263425@main
(e5e7a5d1f961): <
https://commits.webkit.org/263425@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 466092
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug